Downgrade to language level 8 (#13)